--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
@@ -2,12 +2,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
-             xmlns:ir="clr-namespace:Avalonia.Xaml.Interactions.Responsive;assembly=Avalonia.Xaml.Interactions"
              xmlns:c="using:WalletWasabi.Fluent.Controls"
              xmlns:history="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.History"
-             xmlns:converters="clr-namespace:WalletWasabi.Fluent.Converters"
-             xmlns:historyItems="clr-namespace:WalletWasabi.Fluent.ViewModels.Wallets.Home.History.HistoryItems"
+             xmlns:columns="clr-namespace:WalletWasabi.Fluent.Views.Wallets.Home.History.Columns"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="history:HistoryViewModel"
              x:CompileBindings="True"
@@ -119,12 +116,7 @@
                              Width="Auto">
         <DataBoxTemplateColumn.CellTemplate>
           <DataTemplate>
-            <c:PrivacyContentControl x:DataType="historyItems:HistoryItemViewModelBase"
-                                     Content="{Binding DateString}"
-                                     Classes="monoSpaced"
-                                     FontSize="15"
-                                     Margin="10 0"
-                                     NumberOfPrivacyChars="15" />
+            <c:Lazy Load="Lazy" Unload="Lazy" Type="{x:Type columns:HistoryTableDateColumn}"/>
           </DataTemplate>
         </DataBoxTemplateColumn.CellTemplate>
       </DataBoxTemplateColumn>
@@ -135,20 +127,7 @@
                              Width="Auto">
         <DataBoxTemplateColumn.CellTemplate>
           <DataTemplate>
-            <c:PrivacyContentControl PrivacyReplacementMode="Icon">
-              <c:PrivacyContentControl.Styles>
-                <Style Selector="c|PrivacyContentControl /template/ Viewbox#PART_Icon">
-                  <Setter Property="Height" Value="18" />
-                  <Setter Property="Margin" Value="0" />
-                </Style>
-              </c:PrivacyContentControl.Styles>
-              <Panel x:DataType="historyItems:HistoryItemViewModelBase">
-                <PathIcon ToolTip.Tip="Transaction" Data="{StaticResource normal_transaction}" Opacity="0.6"
-                          IsVisible="{Binding !IsCoinJoin}" />
-                <PathIcon ToolTip.Tip="CoinJoin" Data="{StaticResource shield_regular}" Height="15" Opacity="0.6"
-                          IsVisible="{Binding IsCoinJoin}" />
-              </Panel>
-            </c:PrivacyContentControl>
+            <c:Lazy Load="Lazy" Unload="Lazy" Type="{x:Type columns:HistoryTableTypeColumn}"/>
           </DataTemplate>
         </DataBoxTemplateColumn.CellTemplate>
       </DataBoxTemplateColumn>
@@ -160,38 +139,8 @@
                              CanUserSort="False">
         <DataBoxTemplateColumn.CellTemplate>
           <DataTemplate>
-            <c:PrivacyContentControl PrivacyReplacementMode="Text" NumberOfPrivacyChars="15" Classes="monoSpacedPrivacyReplacement">
-              <DockPanel LastChildFill="False" x:DataType="historyItems:HistoryItemViewModelBase">
-                <c:TagsBox Padding="0"
-                          Margin="0"
-                          MinWidth="0"
-                          BorderThickness="0"
-                          DockPanel.Dock="Left"
-                          IsReadOnly="True"
-                          Items="{Binding Label}"
-                          HorizontalAlignment="Stretch"
-                          VerticalAlignment="Center" />
-                <Button Classes="labelFlyout"
-                        DockPanel.Dock="Left"
-                        IsVisible="{Binding !!FilteredLabel.Count}"
-                        Content="..."
-                        Margin="0 4 0 0">
-                  <Button.Flyout>
-                    <Flyout Placement="BottomEdgeAlignedLeft" ShowMode="TransientWithDismissOnPointerMoveAway">
-                      <c:TagsBox IsReadOnly="True"
-                                Items="{Binding FilteredLabel}" />
-                    </Flyout>
-                  </Button.Flyout>
-                  <ToolTip.Tip>
-                    <Panel>
-                      <c:TagsBox IsReadOnly="True"
-                                Margin="4,6,0,0"
-                                Items="{Binding FilteredLabel}" />
-                    </Panel>
-                  </ToolTip.Tip>
-                </Button>
-              </DockPanel>
-            </c:PrivacyContentControl>
+
+            <c:Lazy Load="Lazy" Unload="Lazy" Type="{x:Type columns:HistoryTableLabelsColumn}"/>
           </DataTemplate>
         </DataBoxTemplateColumn.CellTemplate>
       </DataBoxTemplateColumn>
@@ -203,23 +152,7 @@
                              MaxWidth="210">
         <DataBoxTemplateColumn.CellTemplate>
           <DataTemplate>
-            <Panel Name="Panel" HorizontalAlignment="Stretch">
-              <StackPanel x:DataType="historyItems:HistoryItemViewModelBase"
-                          IsVisible="{Binding !!IncomingAmount}"
-                          HorizontalAlignment="Right">
-                <PathIcon Data="{StaticResource arrow_down_right_regular}" Opacity="0.6">
-                  <i:Interaction.Behaviors>
-                    <ir:AdaptiveBehavior SourceControl="{Binding #Panel}" x:CompileBindings="False">
-                      <ir:AdaptiveClassSetter MinWidth="0" MaxWidth="120" ClassName="hidden"/>
-                    </ir:AdaptiveBehavior>
-                  </i:Interaction.Behaviors>
-                </PathIcon>
-                <c:PrivacyContentControl Content="{Binding IncomingAmount, Converter={x:Static converters:MoneyConverters.ToFormattedString}}"
-                                       Classes="monoSpaced"
-                                       FontSize="15"
-                                       NumberOfPrivacyChars="9" />
-              </StackPanel>
-            </Panel>
+            <c:Lazy Load="Lazy" Unload="Lazy" Type="{x:Type columns:HistoryTableIncomingColumn}"/>
           </DataTemplate>
         </DataBoxTemplateColumn.CellTemplate>
       </DataBoxTemplateColumn>
@@ -231,23 +164,7 @@
                              MaxWidth="210">
         <DataBoxTemplateColumn.CellTemplate>
           <DataTemplate>
-            <Panel Name="Panel" HorizontalAlignment="Stretch">
-              <StackPanel x:DataType="historyItems:HistoryItemViewModelBase"
-                          IsVisible="{Binding !!OutgoingAmount}"
-                          HorizontalAlignment="Right">
-                <PathIcon Data="{StaticResource arrow_up_right_regular}" Opacity="0.6">
-                  <i:Interaction.Behaviors>
-                    <ir:AdaptiveBehavior SourceControl="{Binding #Panel}" x:CompileBindings="False">
-                      <ir:AdaptiveClassSetter MinWidth="0" MaxWidth="120" ClassName="hidden"/>
-                    </ir:AdaptiveBehavior>
-                  </i:Interaction.Behaviors>
-                </PathIcon>
-                <c:PrivacyContentControl Content="{Binding OutgoingAmount, Converter={x:Static converters:MoneyConverters.ToFormattedString}}"
-                                       Classes="monoSpaced"
-                                       FontSize="15"
-                                       NumberOfPrivacyChars="9" />
-              </StackPanel>
-            </Panel>
+            <c:Lazy Load="Lazy" Unload="Lazy" Type="{x:Type columns:HistoryTableOutgoingColumn}"/>
           </DataTemplate>
         </DataBoxTemplateColumn.CellTemplate>
       </DataBoxTemplateColumn>
@@ -258,13 +175,7 @@
                              Width="Auto">
         <DataBoxTemplateColumn.CellTemplate>
           <DataTemplate>
-            <c:PrivacyContentControl x:DataType="historyItems:HistoryItemViewModelBase"
-                                     Content="{Binding Balance, Converter={x:Static converters:MoneyConverters.ToFormattedString}}"
-                                     Classes="monoSpaced"
-                                     FontSize="15"
-                                     NumberOfPrivacyChars="9"
-                                     HorizontalAlignment="Right"
-                                     Margin="10 0" />
+            <c:Lazy Load="Lazy" Unload="Lazy" Type="{x:Type columns:HistoryTableBalanceColumn}"/>
           </DataTemplate>
         </DataBoxTemplateColumn.CellTemplate>
       </DataBoxTemplateColumn>
@@ -276,38 +187,7 @@
                              MaxWidth="120">
         <DataBoxTemplateColumn.CellTemplate>
           <DataTemplate>
-            <Panel x:DataType="historyItems:HistoryItemViewModelBase">
-              <!-- Confirmed -->
-              <StackPanel IsVisible="{Binding IsConfirmed}">
-                <PathIcon Data="{StaticResource checkmark_filled}"
-                          Foreground="{DynamicResource SystemAccentColor}"
-                          Height="11"
-                          ToolTip.Tip="Confirmed"/>
-                <TextBlock Classes="monoSpaced" Text="Confirmed">
-                  <!--<i:Interaction.Behaviors>
-                    <ir:AdaptiveBehavior SourceControl="{Binding $parent[DataGrid]}" x:CompileBindings="False">
-                      <ir:AdaptiveClassSetter MinWidth="0" MaxWidth="940" ClassName="hidden"/>
-                      <ir:AdaptiveClassSetter MinWidth="940" MaxWidth="Infinity" ClassName="visible"/>
-                    </ir:AdaptiveBehavior>
-                  </i:Interaction.Behaviors>-->
-                </TextBlock>
-              </StackPanel>
-              <!-- Pending -->
-              <StackPanel IsVisible="{Binding !IsConfirmed}">
-                <PathIcon Data="{StaticResource clock_regular}"
-                          Height="14"
-                          Opacity="0.6"
-                          ToolTip.Tip="Pending"/>
-                <TextBlock Classes="monoSpaced" Text="Pending">
-                  <!--<i:Interaction.Behaviors>
-                    <ir:AdaptiveBehavior SourceControl="{Binding $parent[DataGrid]}" x:CompileBindings="False">
-                      <ir:AdaptiveClassSetter MinWidth="0" MaxWidth="940" ClassName="hidden"/>
-                      <ir:AdaptiveClassSetter MinWidth="940" MaxWidth="Infinity" ClassName="visible"/>
-                    </ir:AdaptiveBehavior>
-                  </i:Interaction.Behaviors>-->
-                </TextBlock>
-              </StackPanel>
-            </Panel>
+            <c:Lazy Load="Lazy" Unload="Lazy" Type="{x:Type columns:HistoryTableStatusColumn}"/>
           </DataTemplate>
         </DataBoxTemplateColumn.CellTemplate>
       </DataBoxTemplateColumn>
@@ -318,10 +198,7 @@
                              CanUserSort="False">
         <DataBoxTemplateColumn.CellTemplate>
           <DataTemplate>
-            <Button x:DataType="historyItems:HistoryItemViewModelBase" Classes="plain" ToolTip.Tip="Show Details"
-                    Command="{Binding ShowDetailsCommand}">
-              <PathIcon Data="{StaticResource details_regular}" Height="15" Opacity="0.6" />
-            </Button>
+            <c:Lazy Load="Lazy" Unload="Lazy" Type="{x:Type columns:HistoryTableDetailsColumn}"/>
           </DataTemplate>
         </DataBoxTemplateColumn.CellTemplate>
       </DataBoxTemplateColumn>
