--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
@@ -221,7 +221,7 @@
               <c:PrivacyContentControl PrivacyReplacementMode="Text" NumberOfPrivacyChars="15"
                                        Classes="monoSpacedPrivacyReplacement">
                 <DockPanel LastChildFill="False" x:DataType="historyItems:HistoryItemViewModelBase">
-                  <c:TagsBox Padding="0"
+                  <!--<c:TagsBox Padding="0"
                              Margin="0"
                              MinWidth="0"
                              BorderThickness="0"
@@ -229,13 +229,19 @@
                              IsReadOnly="True"
                              Items="{Binding Label}"
                              HorizontalAlignment="Stretch"
-                             VerticalAlignment="Center" />
+                             VerticalAlignment="Center" />-->
+                  <Button Classes="labelFlyout"
+                          DockPanel.Dock="Left"
+                          Content="{Binding Label[0]}"
+                          IsVisible="{Binding !!Label.Count}"
+                          IsHitTestVisible="False"
+                          Margin="0 4 6 0"/>
                   <Button Classes="labelFlyout"
                           DockPanel.Dock="Left"
                           IsVisible="{Binding !!FilteredLabel.Count}"
                           Content="..."
                           Margin="0 4 0 0">
-                    <Button.Flyout>
+                    <!--<Button.Flyout>
                       <Flyout Placement="BottomEdgeAlignedLeft" ShowMode="TransientWithDismissOnPointerMoveAway">
                         <c:TagsBox IsReadOnly="True"
                                    Items="{Binding FilteredLabel}" />
@@ -247,7 +253,7 @@
                                    Margin="4,6,0,0"
                                    Items="{Binding FilteredLabel}" />
                       </Panel>
-                    </ToolTip.Tip>
+                    </ToolTip.Tip>-->
                   </Button>
                 </DockPanel>
               </c:PrivacyContentControl>
