--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/HistoryTable.axaml
@@ -232,10 +232,15 @@
                              VerticalAlignment="Center" />-->
                   <Button Classes="labelFlyout"
                           DockPanel.Dock="Left"
-                          Content="{Binding Label[0]}"
+                          HorizontalAlignment="Stretch"
+                          VerticalAlignment="Center"
                           IsVisible="{Binding !!Label.Count}"
                           IsHitTestVisible="False"
-                          Margin="0 4 6 0"/>
+                          Margin="0 4 4 0">
+                    <TextBlock Text="{Binding Label[0], FallbackValue=''}"
+                               MaxWidth="120"
+                               TextTrimming="CharacterEllipsis" />
+                  </Button>
                   <Button Classes="labelFlyout"
                           DockPanel.Dock="Left"
                           IsVisible="{Binding !!FilteredLabel.Count}"
